src/tests/fixtures/locate/inputType.ts.expected
-----------------
INPUT
----------------- 
// Locate: User
/** @gqlInput */
type User = {
  /** @gqlField */
  name: string;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/locate/inputType.ts:3:6 - error: Located here

3 type User = {
       ~~~~
